Implementação de Checkbox para Disponibilidade e Interesses

--- a/codigo/raphael_thierry_coelho/cadastro-volutarios/cadastro-voluntarios.html
+++ b/codigo/raphael_thierry_coelho/cadastro-volutarios/cadastro-voluntarios.html
@@ -45,6 +45,39 @@
 
                         <label for="confirmar-senha">Confirmar Senha</label>
                         <input type="password" id="confirmar-senha" name="confirmar-senha" required placeholder="Confirme sua senha"><br>
+
+                        <h5>Disponibilidade</h5>
+                        <label>SEGUNDA</label>
+                        <label><input type="checkbox">Manhã</label>
+                        <label><input type="checkbox">Tarde</label>
+                        <label><input type="checkbox">Noite</label><br>
+
+                        <label>TERÇA</label>
+                        <label><input type="checkbox">Manhã</label>
+                        <label><input type="checkbox">Tarde</label>
+                        <label><input type="checkbox">Noite</label><br>
+
+                        <label>QUARTA</label>
+                        <label><input type="checkbox">Manhã</label>
+                        <label><input type="checkbox">Tarde</label>
+                        <label><input type="checkbox">Noite</label><br>
+
+                        <label>QUINTA</label>
+                        <label><input type="checkbox">Manhã</label>
+                        <label><input type="checkbox">Tarde</label>
+                        <label><input type="checkbox">Noite</label><br>
+
+                        <label>SEXTA</label>
+                        <label><input type="checkbox">Manhã</label>
+                        <label><input type="checkbox">Tarde</label>
+                        <label><input type="checkbox">Noite</label><br>
+
+                        <h6>Áreas de Interesse</h6>
+                        <label><input type="checkbox">Distribuição de Alimentos</label><br>
+                        <label><input type="checkbox">Arrecadação</label><br>
+                        <label><input type="checkbox">Apoio Logístico</label><br>
+                        <label><input type="checkbox">Divulgação e Redes Sociais</label><br>
+                        <label><input type="checkbox">Atendimento ao Público</label><br>
                     </div>
                     <button id="btn-submit" type="submit">Cadastrar</button>
                 </form>
