--- a/codigo/raphael_thierry_coelho/cadastro-volutarios/cadastro-voluntarios.html
+++ b/codigo/raphael_thierry_coelho/cadastro-volutarios/cadastro-voluntarios.html
@@ -24,64 +24,95 @@
 
     <main>
          <div id="pagina">
-            <div class="container-pagina">
-                <h4 id="titulo-pagina">Seja um Voluntário!</h4>
+            <h4 id="titulo-pagina">Seja um Voluntário!</h4>
                 <form id="form-voluntarios">
-                    <div id="container-dados">
-                        <label for="nome">Nome</label>
-                        <input type="text" id="nome" name="nome" required placeholder="Digite seu nome" maxlength="50"><br>
+                    <div class="colunas-form">
+                        <div class="cadastro">
+                            <h5 class="titulo-form">Cadastro</h5>
+                            <div id="container-dados">
+                                <label for="nome">Nome</label>
+                                <input type="text" id="nome" name="nome" required placeholder="Digite seu nome" maxlength="50"><br>
 
-                        <label for="telefone">Telefone</label>
-                        <input type="text" id="telefone" name="telefone" required placeholder="(XX) XXXXX-XXXX" maxlength="16"><br>
+                                <label for="telefone">Telefone</label>
+                                <input type="text" id="telefone" name="telefone" required placeholder="(XX) XXXXX-XXXX" maxlength="16"><br>
 
-                        <label for="email">Email</label>
-                        <input type="text" id="email" name="email" required placeholder="email@nutritech.com" maxlength="50"><br>
+                                <label for="email">Email</label>
+                                <input type="text" id="email" name="email" required placeholder="email@nutritech.com" maxlength="50"><br>
 
-                        <label for="cpf">CPF</label>
-                        <input type="text" id="cpf" name="cpf" required placeholder="___.___.___-__" maxlength="14"><br>
-                        
-                        <label for="senha">Senha</label>
-                        <input type="password" id="senha" name="senha" required placeholder="Escolha uma senha"><br>
+                                <label for="cpf">CPF</label>
+                                <input type="text" id="cpf" name="cpf" required placeholder="___.___.___-__" maxlength="14"><br>
+                                
+                                <label for="senha">Senha</label>
+                                <input type="password" id="senha" name="senha" required placeholder="Escolha uma senha"><br>
 
-                        <label for="confirmar-senha">Confirmar Senha</label>
-                        <input type="password" id="confirmar-senha" name="confirmar-senha" required placeholder="Confirme sua senha"><br>
+                                <label for="confirmar-senha">Confirmar Senha</label>
+                                <input type="password" id="confirmar-senha" name="confirmar-senha" required placeholder="Confirme sua senha"><br>
+                            </div>
+                        </div>
+                        <div class="direita-form">
+                            <div class="container-checkboxes">
+                                <div class="disponibilidade">
+                                    <h6 class="titulo-disponibilidade">Disponibilidade</h6>
+                                    <div class="tabela-disponibilidade">
+                                        <!-- LINHA DE TÍTULOS -->
+                                        <div></div>
+                                        <div class="header">Manhã</div>
+                                        <div class="header">Tarde</div>
+                                        <div class="header">Noite</div>
 
-                        <h5>Disponibilidade</h5>
-                        <label>SEGUNDA</label>
-                        <label><input type="checkbox">Manhã</label>
-                        <label><input type="checkbox">Tarde</label>
-                        <label><input type="checkbox">Noite</label><br>
+                                        <!-- SEGUNDA A SEXTA -->
+                                        <div class="dia">Segunda</div>
+                                        <div><input type="checkbox" name="segunda-manha"></div>
+                                        <div><input type="checkbox" name="segunda-tarde"></div>
+                                        <div><input type="checkbox" name="segunda-noite"></div>
 
-                        <label>TERÇA</label>
-                        <label><input type="checkbox">Manhã</label>
-                        <label><input type="checkbox">Tarde</label>
-                        <label><input type="checkbox">Noite</label><br>
+                                        <div class="dia">Terça</div>
+                                        <div><input type="checkbox" name="terca-manha"></div>
+                                        <div><input type="checkbox" name="terca-tarde"></div>
+                                        <div><input type="checkbox" name="terca-noite"></div>
 
-                        <label>QUARTA</label>
-                        <label><input type="checkbox">Manhã</label>
-                        <label><input type="checkbox">Tarde</label>
-                        <label><input type="checkbox">Noite</label><br>
+                                        <div class="dia">Quarta</div>
+                                        <div><input type="checkbox" name="quarta-manha"></div>
+                                        <div><input type="checkbox" name="quarta-tarde"></div>
+                                        <div><input type="checkbox" name="quarta-noite"></div>
 
-                        <label>QUINTA</label>
-                        <label><input type="checkbox">Manhã</label>
-                        <label><input type="checkbox">Tarde</label>
-                        <label><input type="checkbox">Noite</label><br>
+                                        <div class="dia">Quinta</div>
+                                        <div><input type="checkbox" name="quinta-manha"></div>
+                                        <div><input type="checkbox" name="quinta-tarde"></div>
+                                        <div><input type="checkbox" name="quinta-noite"></div>
 
-                        <label>SEXTA</label>
-                        <label><input type="checkbox">Manhã</label>
-                        <label><input type="checkbox">Tarde</label>
-                        <label><input type="checkbox">Noite</label><br>
+                                        <div class="dia">Sexta</div>
+                                        <div><input type="checkbox" name="sexta-manha"></div>
+                                        <div><input type="checkbox" name="sexta-tarde"></div>
+                                        <div><input type="checkbox" name="sexta-noite"></div>
+                                    </div>
+                                </div>
 
-                        <h6>Áreas de Interesse</h6>
-                        <label><input type="checkbox">Distribuição de Alimentos</label><br>
-                        <label><input type="checkbox">Arrecadação</label><br>
-                        <label><input type="checkbox">Apoio Logístico</label><br>
-                        <label><input type="checkbox">Divulgação e Redes Sociais</label><br>
-                        <label><input type="checkbox">Atendimento ao Público</label><br>
+                                <div class="areas-interesse">
+                                    <h6 class="titulo-areas-interesse">Áreas de Interesse</h6>
+                                    <div class="tabela-areas-interesse">
+                                        <div class="opcao">Distribuição de Alimentos</div>
+                                        <div><input type="checkbox" name="opcao1"></div>
+
+                                        <div class="opcao">Arrecadação</div>
+                                        <div><input type="checkbox" name="opcao1"></div>
+
+                                        <div class="opcao">Apoio Logístico</div>
+                                        <div><input type="checkbox" name="opcao1"></div>
+
+                                        <div class="opcao">Divulgação e Redes Sociais</div>
+                                        <div><input type="checkbox" name="opcao1"></div>
+
+                                        <div class="opcao">Atendimento ao Público</div>
+                                        <div><input type="checkbox" name="opcao1"></div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <button id="btn-submit" type="submit">Cadastrar</button>
                 </form>
-            </div>
          </div>
     </main>
 
@@ -107,7 +138,7 @@
     <footer class="bg-light py-4">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="footer-left text-center text-md-start">
-                <h3 class="mb-2">Local</h3>
+                <h7 class="mb-2">Local</h7>
                 <p>Belo Horizonte</p>
             </div>
 
@@ -116,7 +147,7 @@
             </div>
 
             <div class="footer-right text-center text-md-end">
-                <h3 class="mb-2">Contato</h3>
+                <h8 class="mb-2">Contato</h8>
                 <p class="mb-1">(31) 9999-6666</p>
                 <p>nutritech@pucminas.com.br</p>
             </div>
