--- a/codigo/matheus_figueiredo/datas_voluntariar/index.html
+++ b/codigo/matheus_figueiredo/datas_voluntariar/index.html
@@ -37,6 +37,25 @@
             <button type="submit">Confirmar Voluntariado</button>
         </form>
     </main>
+    
+    <footer class="bg-light py-4">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="footer-left text-center text-md-start">
+                <h3 class="mb-2">Local</h3>
+                <p>Belo Horizonte</p>
+            </div>
+
+            <div class="footer-center text-center">
+                <p>© 2025 NutriTech</p>
+            </div>
+
+            <div class="footer-right text-center text-md-end">
+                <h3 class="mb-2">Contato</h3>
+                <p class="mb-1">(31) 9999-6666</p>
+                <p>nutritech@pucminas.com.br</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
