aba de badges feita

--- a/codigo/artur_de_figueiredo_neves/badages/badage.html
+++ b/codigo/artur_de_figueiredo_neves/badages/badage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ranking Mensal</title>
+  <title>Badages</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="style.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet" />
@@ -23,13 +23,27 @@
 
 
   <main class="container my-5">
-    <div class="text-center mb-4">
-      <h3 class="display-5" style="color: #4CAF50;">Badages e Conquistas</h3>
-    </div>
-
-    <ul id="ranking-list" class="list-unstyled">
-      
-    </ul>
+    <section class="badges-section">
+      <h3 class="display-6">Badges e Conquistas</h3>
+      <div class="badges-container">
+        <div class="badge-item">
+          <img src="imgs/elo1.png" alt="Semente Solidária" class="badge-img">
+          <p class="badge-title">20$<br><strong>Semente Solidária</strong></p>
+        </div>
+        <div class="badge-item">
+          <img src="imgs/elo2.png" alt="Coração Generoso" class="badge-img">
+          <p class="badge-title">50$<br><strong>Coração Generoso</strong></p>
+        </div>
+        <div class="badge-item">
+          <img src="imgs/elo3.png" alt="Herói da Comunidade" class="badge-img">
+          <p class="badge-title">70$<br><strong>Herói da Comunidade</strong></p>
+        </div>
+        <div class="badge-item">
+          <img src="imgs/elo4.png" alt="Anjo da Esperança" class="badge-img">
+          <p class="badge-title">100$<br><strong>Anjo da Esperança</strong></p>
+        </div>
+      </div>
+    </section>
   </main>
 
 
@@ -52,6 +66,6 @@
     </div>
   </footer>
 
-  <script src="ranking.js"></script>
+  
 </body>
 </html>
