--- a/codigo/lucas_duarte/agendamento_coleta/agendamento.html
+++ b/codigo/lucas_duarte/agendamento_coleta/agendamento.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../../assets/base.css">
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header class="d-flex justify-content-between align-items-center p-3 bg-light">
@@ -20,16 +22,23 @@
         </a>
     </header>
 
-
-
     <main>
-
-        <!--Escreva o seu codigo aqui-->
+        <div class="container my-5">
+            <h1 class="mb-4">Agendamento de Coleta</h1>
+            <form id="agendamentoForm">
+                <div class="mb-3">
+                    <label for="dataColeta" class="form-label">Selecione o dia para buscar alimento:</label>
+                    <input type="text" class="form-control" id="dataColeta" name="dataColeta" placeholder="Escolha uma data" autocomplete="off" style="pointer-events: auto; background-color: #fff;">
+                </div>
+                <div class="mb-3">
+                    <label for="alimento" class="form-label">Alimento:</label>
+                    <input type="text" class="form-control" id="alimento" name="alimento" readonly>
+                </div>
+                <button type="submit" class="btn btn-success">Agendar Coleta</button>
+            </form>
+            <div id="voluntarioInfo" class="mt-4"></div>
+        </div>
     </main>
-
-
-
-
 
     <footer class="bg-light py-4">
         <div class="container d-flex justify-content-between align-items-center">
@@ -49,6 +58,7 @@
             </div>
         </div>
     </footer>
-
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script src="assets/js/script.js"></script>
 </body>
 </html>
