Adição dos botões editar e excluir

--- a/codigo/larissa_moncao/public/gerenciar_recorrencias.html
+++ b/codigo/larissa_moncao/public/gerenciar_recorrencias.html
@@ -49,7 +49,7 @@
         <!-- Lista Doações -->
         <div class="col-md-8">
           <section id="doacoes">
-            <h2 class="h4 text-center mb-4 border-bottom border-success border-2 pb-2">Doações já realizadas por você</h2>
+            <h2 class="h4 text-center mb-4 border-bottom border-success border-2 py-5 pb-2">Suas Doações Recorrentes</h2>
             <div id="lista-doacoes" class="p-3 rounded-4 shadow">Carregando...</div>
                       <script src="app_recorrencia.js"></script>
           </section>
