Criação de outros arquivos, e atualização do Estilo

--- a/codigo/arthur_vieira_lopes/gestaodevoluntarios/gestaodevoluntarios.html
+++ b/codigo/arthur_vieira_lopes/gestaodevoluntarios/gestaodevoluntarios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil da Ong</title>
+    <title>Gestão de Voluntários</title>
     <link rel="stylesheet" href="gestaodevoluntarios.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -55,7 +55,7 @@
           </td>
           <td>
             <label for="interesse" class="visually-hidden">Interesse</label>
-            <input type="text" name="interesse" id="interesse" placeholder="Ex: Cuidar de animais" required />
+            <input type="text" name="interesse" id="interesse" placeholder="Ex: Montagem de cestas" required />
           </td>
         </tr>
       </tbody>
@@ -65,10 +65,10 @@
     <label for="tipoVoluntariado" class="visually-hidden">Tipo de Voluntariado</label>
     <select name="tipoVoluntariado" id="tipoVoluntariado" required>
       <option value="">Selecione</option>
-      <option value="educacao">Educação</option>
-      <option value="meio_ambiente">Meio Ambiente</option>
-      <option value="saude">Saúde</option>
-      <option value="animais">Proteção Animal</option>
+      <option value="educacao">Triagem e Organização</option>
+      <option value="meio_ambiente">Montagem de cestas</option>
+      <option value="saude">Comunicação e Redes sociais</option>
+      <option value="animais">Logística e Entrega</option>
       <option value="outros">Outros</option>
     </select>
 
