ajuste de dimensões e listas

--- a/codigo/Guilherme_Bittencourt/solicitação_necessidades/index.html
+++ b/codigo/Guilherme_Bittencourt/solicitação_necessidades/index.html
@@ -70,11 +70,21 @@
                 </div>
             </div>
 
-            <!-- Coluna direita: Listagem -->
+            <!-- Coluna direita: Listagens -->
             <div class="form-right">
-                <h3>Listagem de Itens</h3>
-                <ul id="alimento-list" class="list-group"></ul>
-                <ul id="voluntario-list" class="list-group hidden"></ul>
+                <!-- Listagem Temporária -->
+                <div class="list-column">
+                    <h3>Listagem Temporária</h3>
+                    <ul id="alimento-list" class="list-group"></ul>
+                    <ul id="voluntario-list" class="list-group hidden"></ul>
+                </div>
+
+                <!-- Listagem Permanente -->
+                <div class="list-column">
+                    <h3>Itens Salvos Permanente</h3>
+                    <ul id="saved-alimentos" class="list-group"></ul>
+                    <ul id="saved-voluntarios" class="list-group"></ul>
+                </div>
             </div>
         </div>
     </main>
