codigo final sprint 1

--- a/codigo/Guilherme_Bittencourt/solicitação_necessidades/index.html
+++ b/codigo/Guilherme_Bittencourt/solicitação_necessidades/index.html
@@ -74,14 +74,14 @@
             <div class="form-right">
                 <!-- Listagem Temporária -->
                 <div class="list-column">
-                    <h3>Listagem Temporária</h3>
+                    <h3>Lista de necessidades á adicionar</h3>
                     <ul id="alimento-list" class="list-group"></ul>
                     <ul id="voluntario-list" class="list-group hidden"></ul>
                 </div>
 
                 <!-- Listagem Permanente -->
                 <div class="list-column">
-                    <h3>Itens Salvos Permanente</h3>
+                    <h3>Necessidades ainda abertas</h3>
                     <ul id="saved-alimentos" class="list-group"></ul>
                     <ul id="saved-voluntarios" class="list-group"></ul>
                 </div>
