ajuste nos icones de badages

--- a/codigo/artur_de_figueiredo_neves/badages/badage.html
+++ b/codigo/artur_de_figueiredo_neves/badages/badage.html
@@ -27,19 +27,19 @@
       <h3 class="display-6">Badges e Conquistas</h3>
       <div class="badges-container">
         <div class="badge-item">
-          <img src="imgs/elo1.png" alt="Semente Solidária" class="badge-img">
+          <img src="imgs/elogrande1.png" alt="Semente Solidária" class="badge-img">
           <p class="badge-title">20$<br><strong>Semente Solidária</strong></p>
         </div>
         <div class="badge-item">
-          <img src="imgs/elo2.png" alt="Coração Generoso" class="badge-img">
+          <img src="imgs/elogrande2.png" alt="Coração Generoso" class="badge-img">
           <p class="badge-title">50$<br><strong>Coração Generoso</strong></p>
         </div>
         <div class="badge-item">
-          <img src="imgs/elo3.png" alt="Herói da Comunidade" class="badge-img">
+          <img src="imgs/elogrande3.png" alt="Herói da Comunidade" class="badge-img">
           <p class="badge-title">70$<br><strong>Herói da Comunidade</strong></p>
         </div>
         <div class="badge-item">
-          <img src="imgs/elo4.png" alt="Anjo da Esperança" class="badge-img">
+          <img src="imgs/elogrande4.png" alt="Anjo da Esperança" class="badge-img">
           <p class="badge-title">100$<br><strong>Anjo da Esperança</strong></p>
         </div>
       </div>
