--- a/codigo/larissa_moncao/public/gerenciar_recorrencia/gerenciar_recorrencias.html
+++ b/codigo/larissa_moncao/public/gerenciar_recorrencia/gerenciar_recorrencias.html
@@ -57,6 +57,25 @@
       </div>
 
       </div>
+      <!-- Modal Comprovante -->
+<div class="modal fade" id="modalComprovante" tabindex="-1" aria-labelledby="modalComprovanteLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="modalComprovanteLabel">Comprovante de Doação</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+      </div>
+      <div class="modal-body" id="modal-conteudo">
+        Carregando comprovante...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+        <button type="button" class="btn btn-primary" onclick="window.print()">Imprimir</button>
+      </div>
+    </div>
+  </div>
+</div>
+
       </div>
   
   </main>
