troca de icones

--- a/codigo/Guilherme_Bittencourt/solicitação_necessidades/index.html
+++ b/codigo/Guilherme_Bittencourt/solicitação_necessidades/index.html
@@ -29,15 +29,15 @@
                 <div class="form-group">
                     <label>
                         <input type="radio" name="type" value="alimento" checked onclick="toggleForm()">
-                        <svg viewBox="0 0 24 24" width="24" height="24" fill="#368758">
-                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z" />
+                        <svg viewBox="0 0 24 24" width="5" height="24" fill="#368758">
+                            <img src="imgs/simbolo alimento.png" alt="alimento" width="34">
                         </svg>
                         Alimento
                     </label>
                     <label>
                         <input type="radio" name="type" value="voluntario" onclick="toggleForm()">
-                        <svg viewBox="0 0 24 24" width="24" height="24" fill="#368758">
-                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L12 14.17l4.59-4.59L19 10l-7 7z" />
+                        <svg viewBox="0 0 24 24" width="11" height="24" fill="#368758">
+                            <img src="imgs/icone pessoa.png" alt="voluntário" width="20">
                         </svg>
                         Voluntário
                     </label>
