--- a/codigo/larissa_moncao/public/gerenciar_recorrencia/comprovante.html
+++ b/codigo/larissa_moncao/public/gerenciar_recorrencia/comprovante.html
@@ -5,25 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comprovante</title>
     <link rel="stylesheet" href="style_recorrencia.css">
+    <link rel="stylesheet" href="style_comprovante.css">
 </head>
 <body>
-    <div class="container my-5 p-4 border rounded shadow" id="comprovante">
-    <h2 class="text-center mb-4">Comprovante de Doação</h2>
+    <div class="container my-5 d-flex justify-content-center">
+    <div class="receipt border rounded shadow-sm p-4" style="max-width: 320px; font-family: 'Courier New', Courier, monospace; background: #fff;">
+        <h2 class="text-center mb-3" style="font-weight: 700; letter-spacing: 2px;">COMPROVANTE</h2>
 
-    <p><strong>Nome do Doador:</strong> João da Silva</p>
-    <p><strong>CPF:</strong> 123.456.789-00</p>
-    <p><strong>Instituição:</strong> Alimentação Para Todos</p>
-    <p><strong>Descrição:</strong> Doação de alimentos</p>
-    <p><strong>Categoria:</strong> Alimentos</p>
-    <p><strong>Valor:</strong> R$ 150,00</p>
-    <p><strong>Data:</strong> 25/05/2025</p>
-    <p><strong>Status:</strong> Confirmado</p>
+    <div style="border-top: 1px dashed #444; margin: 10px 0;"></div>
 
-    <hr>
+        <p><strong>Nome do Doador:</strong><br> João da Silva</p>
+        <p><strong>CPF:</strong><br> 123.456.789-00</p>
+        <p><strong>Instituição:</strong><br> Alimentação Para Todos</p>
+        <p><strong>Descrição:</strong><br> Doação de alimentos</p>
+        <p><strong>Categoria:</strong><br> Alimentos</p>
+        <p><strong>Valor:</strong><br> R$ 150,00</p>
+        <p><strong>Data:</strong><br> 25/05/2025</p>
+        <p><strong>Status:</strong><br> Confirmado</p>
 
-    <p class="text-center text-muted">Obrigado pela sua contribuição!</p>
+    <div style="border-top: 1px dashed #444; margin: 10px 0;"></div>
+
+        <p class="text-center text-muted" style="font-size: 0.9rem; letter-spacing: 1px;">Obrigado pela sua contribuição!</p>
     </div>
-    <script src="comprovante.js"> </script>
+    </div>
 
+    <script src="comprovante.js"></script>
 </body>
+
 </html>
