--- a/codigo/larissa_moncao/public/gerenciar_recorrencia/gerenciar_recorrencias.html
+++ b/codigo/larissa_moncao/public/gerenciar_recorrencia/gerenciar_recorrencias.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Perfil do Doador</title>
+  <title>Doações Recorrentes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style_recorrencia.css">
 </head>
@@ -11,12 +11,12 @@
     
   <header class="d-flex justify-content-between align-items-center p-3 bg-light">
         <a href="#" class="d-flex align-items-center">
-            <img src="../public/img/logo.png" alt="Logo" class="logo me-3">
+            <img src="../img/logo.png" alt="Logo" class="logo me-3">
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <a href="#" class="usuario-container d-flex align-items-center">
             <h3 class="m-0 me-2">Usuario</h3>
-            <img src="../public/img/usuario.png" alt="Usuário" class="usuario">
+            <img src="../img/usuario.png" alt="Usuário" class="usuario">
         </a>
     </header>
   
