Implementação do local storage

--- a/codigo/raphael_thierry_coelho/cadastro-volutarios/cadastro-voluntarios.html
+++ b/codigo/raphael_thierry_coelho/cadastro-volutarios/cadastro-voluntarios.html
@@ -92,19 +92,19 @@
                                     <h6 class="titulo-areas-interesse">Áreas de Interesse</h6>
                                     <div class="tabela-areas-interesse">
                                         <div class="opcao">Distribuição de Alimentos</div>
-                                        <div><input type="checkbox" name="opcao1"></div>
+                                        <div><input type="checkbox" name="area-interesse" value="Distribuição de Alimentos"></div>
 
                                         <div class="opcao">Arrecadação</div>
-                                        <div><input type="checkbox" name="opcao1"></div>
+                                        <div><input type="checkbox" name="area-interesse" value="Distribuição de Alimentos"></div>
 
                                         <div class="opcao">Apoio Logístico</div>
-                                        <div><input type="checkbox" name="opcao1"></div>
+                                        <div><input type="checkbox" name="area-interesse" value="Apoio Logístico"></div>
 
                                         <div class="opcao">Divulgação e Redes Sociais</div>
-                                        <div><input type="checkbox" name="opcao1"></div>
+                                        <div><input type="checkbox" name="area-interesse" value="Divulgação e Redes Sociais"></div>
 
                                         <div class="opcao">Atendimento ao Público</div>
-                                        <div><input type="checkbox" name="opcao1"></div>
+                                        <div><input type="checkbox" name="area-interesse" value="Atendimento ao Público"></div>
 
                                     </div>
                                 </div>
