--- a/codigo/sprint_1/API_geolocalização/index.html
+++ b/codigo/sprint_1/API_geolocalização/index.html
@@ -89,6 +89,14 @@
       <!-- Coluna Direita - Mapa -->
       <div class="col-md-9 position-relative">
 
+ <!-- Elemento de carregamento -->
+<div id="loading" class="text-center position-absolute top-50 start-50 translate-middle">
+    <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Carregando...</span>
+    </div>
+    <p class="mt-2">Carregando o mapa...</p>
+</div>
+
         <!-- Mapa -->
         <div id="map"></div>
 
@@ -96,6 +104,7 @@
 
     </div>
   </div>
+ 
 </main>
 
     <footer class="bg-light py-4">
