--- a/codigo/public/modulos/login/login.html
+++ b/codigo/public/modulos/login/login.html
@@ -19,15 +19,15 @@
       <div id="login-row" class="row justify-content-center align-items-center bg-secondary m-5 p-5">
         <div id="login-column" class="col-md-6">
           <div id="login-box" class="col-md-12">
-            <form id="login-form" class="form" method="post" onsubmit="loginUser (this)">
+            <form id="loginForm" class="form">
               <h3 class="text-center text-light">Identificação de Usuário</h3>
               <div class="form-group">
-                <label for="username" class="text-info text-light">Login</label><br>
-                <input type="text" name="username" id="username" class="form-control">
+                <label for="login" class="text-info text-light">Login</label><br>
+                <input type="text" name="login" id="login" class="form-control">
               </div>
               <div class="form-group">
-                <label for="password" class="text-info text-light">Senha</label><br>
-                <input type="password" name="password" id="password" class="form-control">
+                <label for="senha" class="text-info text-light">Senha</label><br>
+                <input type="password" name="senha" id="senha" class="form-control">
               </div>
               <div class="form-group text-center mt-3">
                 <button type="button" class="btn btn-primary text-light" data-toggle="modal" data-target="#loginModal">Registrar</button>
@@ -40,7 +40,6 @@
     </div>
   </div>
 
-  <!-- Modal -->
   <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -53,7 +52,7 @@
         </div>
         <div class="modal-body">
           <div id="login-box" class="col-md-12">
-            <form id="login-form" class="form" method="post" onsubmit="loginUser (this)">
+            <form id="login-form" class="form" method="post"> 
               <h3 class="text-center text-info">Novo usuário</h3>
               <div class="form-group">
                 <label for="login" class="text-info">Usuário</label><br>
@@ -89,26 +88,8 @@
   <script src="../../assets/js/login.js"></script>
   <script>
 
-    // Declara uma função para processar o formulário de login
-    function processaFormLogin(event) {
-      // Cancela a submissão do formulário para tratar sem fazer refresh da tela
-      event.preventDefault();
 
-      // Obtem os dados de login e senha a partir do formulário de login
-      var username = document.getElementById('username').value;
-      var password = document.getElementById('password').value;
-
-      // Valida login e se estiver ok, redireciona para tela inicial da aplicação
-      resultadoLogin = loginUser(username, password);
-      if (resultadoLogin) {
-        window.location.href = RETURN_URL;
-      }
-      else { // Se login falhou, avisa ao usuário
-        alert('Usuário ou senha incorretos');
-      }
-    }
-
-    function salvaLogin(event) {
+    async function salvaLogin(event) { 
       // Cancela a submissão do formulário para tratar sem fazer refresh da tela
       event.preventDefault();
 
@@ -120,20 +101,24 @@
       let senha2 = document.getElementById('txt_senha2').value;
       if (senha != senha2) {
         alert('As senhas informadas não conferem.');
-        return
+        return;
       }
 
       // Adiciona o usuário no banco de dados
-      addUser(nome, login, senha, email);
-      alert('Usuário salvo com sucesso. Proceda com o login para ');
+      try { 
+        await addUser(nome, login, senha, email);
+        alert('Usuário salvo com sucesso. Proceda com o login.');
 
-      // Oculta a div modal do login
-      //document.getElementById ('loginModal').style.display = 'none';
-      $('#loginModal').modal('hide');
+        // Oculta a div modal do login
+        $('#loginModal').modal('hide');
+      } catch (error) {
+        console.error("Registration error:", error);
+        alert('Erro ao salvar usuário. Por favor, tente novamente.');
+      }
     }
 
     // Associa a funçao processaFormLogin  formulário adicionado um manipulador do evento submit
-    document.getElementById('login-form').addEventListener('submit', processaFormLogin);
+    // document.getElementById('loginForm').addEventListener('submit', processaFormLogin); // MODIFIED: Changed 'login-form' to 'loginForm'
 
 
     // Associar salvamento ao botao
