--- a/codigo/public/ranking.html
+++ b/codigo/public/ranking.html
@@ -12,29 +12,33 @@
 </head>
 <body>
   
-     <header class="d-flex align-items-center p-3 bg-light position-relative">
-        <a href="index.html" class="d-flex align-items-center position-relative z-2">
-            <img src="assets/images/logo.png" alt="Logo" class="logo me-3">
+    <header class="d-flex align-items-center p-3 bg-light position-relative">
+        <a href="/public/index.html" class="d-flex align-items-center position-relative z-2"> 
+            <img src="/public/assets/images/logo.png" alt="Logo" class="logo me-3"> 
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
-            <a href="ranking.html" class="nav-link link-white">Ranking</a>
+            <a href="/public/ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="#" class="nav-link link-white">ONGs</a>
             <a href="#" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
-        <div class="dropdown ms-auto position-relative z-2">
+        
+        <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                <h3 class="m-0 me-2">Usuário</h3>
-                <img src="assets/images/usuario.png" alt="Usuário" class="usuario">
+                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
+                <img src="/public/assets/images/usuario.png" alt="Usuário" class="usuario"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
-                <li><a class="dropdown-item" href="#">Perfil</a></li>
-                <li>
-                    <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Sair</a></li>
+                <li><a class="dropdown-item" href="/public/sprint_1/Perfil_usuario/index.html" id="userProfileLink">Perfil</a></li> 
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#" id="logoutLink">Sair</a></li>
             </ul>
+        </div>
+
+        <div class="usuario-container ms-auto" id="userSection">
+            <a href="/public/modulos/login/login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
+            <a href="/public/cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
         </div>
     </header>
 
@@ -73,5 +77,7 @@
   </footer>
 
   <script src="assets/js/ranking.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="assets/js/login.js"></script>
 </body>
 </html>
