integração login e cadastro de ONG. Mapa esta puxando do json server e lng e lat adicionados na hora do cadastro.

--- a/codigo/public/cadastro_usuario.html
+++ b/codigo/public/cadastro_usuario.html
@@ -132,8 +132,8 @@
             </div>
         </fieldset>
 
-        <div class="tipo-usuario">
-          <button type="button" class="user-btn">Sou uma Instituição</button>
+        <div class="tipo-usuario" style="margin-bottom: 15px; text-align: center;">
+          <a href="/public/cadastro_ongs.html" class="user-btn" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px 20px; background-color: #5D8736; color: white; border-radius: 5px;">Sou uma Instituição</a>
         </div>
 
         <button type="submit" class="submit-btn">Cadastrar</button>
