--- a/codigo/public/cadastro_ongs.html
+++ b/codigo/public/cadastro_ongs.html
@@ -4,22 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../assets/base.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/cadastro_ongs.css">
+    <link rel="stylesheet" href="assets/css/base.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <title>Cadastro ONG</title>
 </head>
 
 <body>
-    <header class="header">
-        <a href="#" class="logo-container">
-            <img src="imgs/logo.png" alt="Logo" class="logo">
-            <h2>Alimentação <br> Para <br> Todos</h2>
+    <header class="d-flex align-items-center p-3 bg-light position-relative">
+        <a href="/public/index.html" class="d-flex align-items-center position-relative z-2"> 
+            <img src="/public/assets/images/logo.png" alt="Logo" class="logo me-3"> 
+            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
-        <a href="#" class="usuario-container">
-            <h3>Usuário</h3>
-            <img src="imgs/usuario.png" alt="Usuário" class="usuario">
-        </a>
+        <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
+            <a href="/public/ranking.html" class="nav-link link-white">Ranking</a> 
+            <a href="#" class="nav-link link-white">ONGs</a>
+            <a href="#" class="nav-link link-white">Seja um Voluntário</a>
+        </nav>
+      
+        <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
+            <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
+                <img src="/public/assets/images/usuario.png" alt="Usuário" class="usuario"> 
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
+                <li><a class="dropdown-item" href="/public/sprint_1/Perfil_usuario/index.html" id="userProfileLink">Perfil</a></li> 
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#" id="logoutLink">Sair</a></li>
+            </ul>
+        </div>
+
+        <div class="usuario-container ms-auto" id="userSection">
+            <a href="/public/modulos/login/login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
+            <a href="/public/cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
+        </div>
     </header>
     <main>
         <section class="form-section">
@@ -96,6 +118,20 @@
                     </div>
                 </fieldset>
 
+                <fieldset id="tiposDoacaoFieldset">
+                    <legend>Tipos de Doação Aceitos</legend>
+                    <div class="input-group">
+                        <div class="input-item">
+                            <input type="checkbox" id="tipo_doacao_alimentos" name="tipo_doacao" value="alimentos">
+                            <label for="tipo_doacao_alimentos">Alimentos</label>
+                        </div>
+                        <div class="input-item">
+                            <input type="checkbox" id="tipo_doacao_dinheiro" name="tipo_doacao" value="dinheiro">
+                            <label for="tipo_doacao_dinheiro">Dinheiro</label>
+                        </div>
+                    </div>
+                </fieldset>
+
                 <fieldset>
                     <legend>Sobre a ONG</legend>
                     <div class="input-item">
@@ -112,6 +148,9 @@
                     </div>
                 </fieldset>
 
+                <div class="tipo-usuario" style="margin-bottom: 15px; text-align: center;">
+                    <a href="/public/cadastro_usuario.html" class="user-btn" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px 20px; background-color: #5D8736; color: white; border-radius: 5px; font-weight: bold;">Sou um Doador</a>
+
                 <button type="submit" class="btn-cadastrar">Cadastrar ONG</button>
             </form>
         </section>
@@ -120,7 +159,10 @@
     <footer>
         <p>&copy; 2025 NutriTech - Todos os direitos reservados.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="assets/js/cadastro_ong.js"></script>
+    <script src="assets/js/login.js"></script>
+
 </body>
 
 </html>
